--- a/username-distribution/redis/04-deployment.yaml
+++ b/username-distribution/redis/04-deployment.yaml
@@ -17,7 +17,15 @@ spec:
         name: redis
     spec:
       containers:
-      - capabilities: {}
+      - name: redis
+        securityContext:
+          allowPrivilegeEscalation: false
+          seccompProfile:
+            type: RuntimeDefault
+          runAsNonRoot: true
+          capabilities:
+            drop:
+            - ALL
         env:
         - name: REDIS_PASSWORD
           valueFrom:
@@ -31,7 +39,6 @@ spec:
           tcpSocket:
             port: 6379
           timeoutSeconds: 1
-        name: redis
         ports:
         - containerPort: 6379
           protocol: TCP
@@ -49,9 +56,6 @@ spec:
             memory: 1Gi
           limits:
             memory: 1Gi
-        securityContext:
-          capabilities: {}
-          privileged: false
         terminationMessagePath: /dev/termination-log
         volumeMounts:
         - mountPath: /var/lib/redis/data
