--- a/username-distribution/redis/02-pvc.yaml
+++ b/username-distribution/redis/02-pvc.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: default
+  storageClassName: ocs-storagecluster-ceph-rbd
   resources:
     requests:
       storage: 1Gi
