--- a/username-distribution/usertool/01-deployment.yaml
+++ b/username-distribution/usertool/01-deployment.yaml
@@ -3,14 +3,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: redis
-  name: redis
+    app: get-a-username
+  name: get-a-username
   namespace: workshop-guide
 spec:
   replicas: 1
   selector:
     matchLabels:
-      deployment: redis
+      deployment: get-a-username
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -19,19 +19,27 @@ spec:
   template:
     metadata:
       labels:
-        deployment: redis
+        deployment: get-a-username
     spec:
       containers:
-      - name: redis
+      - name: get-a-username
+        securityContext:
+          allowPrivilegeEscalation: false
+          seccompProfile:
+            type: RuntimeDefault
+          runAsNonRoot: true
+          capabilities:
+            drop:
+            - ALL
         env:
         - name: LAB_ADMIN_PASS
           value: admin
         - name: LAB_DURATION_HOURS
           value: 1week
         - name: LAB_EXTRA_URLS
-          value: ""
+          value: "https://console-openshift-console.apps.cluster-h4v9k.h4v9k.sandbox932.opentlc.com/;OpenShift Console"
         - name: LAB_MODULE_URLS
-          value: ""
+          value: "https://intelligent-agriculture-workshop-workshop-guide.apps.cluster-h4v9k.h4v9k.sandbox932.opentlc.com/intelligent-agriculture-workshop/main/1-introduction.htmlUSERID=user1&SUBDOMAIN=cluster-8s5ss.sandbox701.opentlc.com&TOMCATIP=150.240.99.53;Intelligent Agriculture Workshop"
         - name: LAB_REDIS_HOST
           value: redis
         - name: LAB_REDIS_PASS
