pre-puller and model-serving

--- a/pre-puller/pre-puller.yaml
+++ b/pre-puller/pre-puller.yaml
@@ -84,3 +84,41 @@ spec:
           requests:
             cpu: 10m
             memory: 10Mi
+---
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
+  name: image-puller-classification-pathservice
+  namespace: rhods-notebooks
+  labels:
+    k8s-app: image-puller
+spec:
+  selector:
+    matchLabels:
+      name: image-puller
+  template:
+    metadata:
+      labels:
+        name: image-puller
+    spec:
+      containers:
+      - name: classification
+        image: quay.io/rh-aiservices-bu/intelligent-agriculture-classification:0.0.3
+        command: ["tail"]
+        args: ["-f", "/dev/null"]
+        resources:
+          limits:
+            memory: 20Mi
+          requests:
+            cpu: 10m
+            memory: 10Mi
+      - name: pathservice
+        image: quay.io/rh-aiservices-bu/intelligent-agriculture-pathservice:0.0.3
+        command: ["tail"]
+        args: ["-f", "/dev/null"]
+        resources:
+          limits:
+            memory: 20Mi
+          requests:
+            cpu: 10m
+            memory: 10Mi
