adjust pre-puller and model server size

--- a/rhods-config/odh-dashboard-config.yaml
+++ b/rhods-config/odh-dashboard-config.yaml
@@ -53,11 +53,11 @@ spec:
     - name: Small
       resources:
         limits:
-          cpu: '2'
-          memory: 2Gi
-        requests:
           cpu: '1'
           memory: 1Gi
+        requests:
+          cpu: 500m
+          memory: 500Mi
     - name: Medium
       resources:
         limits:
